--- a/front/src/app/pages/work-add/work-add.component.html
+++ b/front/src/app/pages/work-add/work-add.component.html
@@ -28,7 +28,7 @@
       </div>
 
       <div class="form-group mb-3">
-        <p-fileUpload name="myfile[]" (uploadHandler)="onUpload($event)" [customUpload]="true" [multiple]="false" accept="application/pdf" >
+        <p-fileUpload name="myfile[]" (uploadHandler)="onUpload($event)" [customUpload]="true" [multiple]="false" accept="application/pdf" [auto]="true" >
         </p-fileUpload>
       </div>
 
