Criado update dos valores

--- a/front/src/app/pages/area/area.component.html
+++ b/front/src/app/pages/area/area.component.html
@@ -10,6 +10,7 @@
         <div class="card-body linha">
           <h5 class="card-title">{{ area.descricao }}</h5>
           <div class="spacer"></div>
+          <button class="btn" [routerLink]="['/areaUpdate']" [state]="area"><i class="fa fa-pencil"></i></button>
           <button class="btn" (click)="deleteArea(area.id!)"><i class="fa fa-trash"></i></button>
         </div>
       </div>
