Melhorada escolha de permissãp para o evento

--- a/front/src/app/pages/choose-user-permission/choose-user-permission.component.html
+++ b/front/src/app/pages/choose-user-permission/choose-user-permission.component.html
@@ -6,18 +6,16 @@
       <h1 class="card-title">Selecionar permissão para acessar o evento</h1>
 
       <div class="form-group mb-3">
-        <label for="titulo">Permissao:</label>
-        <select class="mb-3" formControlName="permissao" >
-          <option class="form-control" *ngFor="let permissao of permissoes" [ngValue]="permissao">{{permissao.permissaoDTO?.descricao}}</option>
-        </select>
+        <div class="linha center">
+          <button *ngFor="let permissao of permissoes" type="button" class="btn btn-primary margin-botoes" (click)="chooseUserPermission(permissao)">
+            {{permissao.permissaoDTO?.descricao}}
+          </button>
+        </div>
       </div>
 
       <div class="linha center">
-        <button class="btn btn-secondary" style="margin-right: 2rem;" (click)="this.mainService.returnPreviousPage()">
+        <button class="btn btn-secondary" (click)="this.mainService.returnPreviousPage()">
           Cancelar
-        </button>
-        <button type="submit" (click)="chooseUserPermission()" class="btn btn-primary">
-          Confirmar
         </button>
       </div>
 
