Corrigida lógica de salvar trabalho, criada tela de visualizar submissões do evento

--- a/front/src/app/pages/main/main.component.html
+++ b/front/src/app/pages/main/main.component.html
@@ -102,5 +102,8 @@
     <app-email-template  *ngIf="this.selectedButton == 'TemplateEmail'">
 
     </app-email-template>
+    <app-organizer-work *ngIf="this.selectedButton == 'Submissoes'">
+
+    </app-organizer-work>
   </div>
 </div>
