--- a/front/src/app/pages/organizer-work/organizer-work.component.html
+++ b/front/src/app/pages/organizer-work/organizer-work.component.html
@@ -3,10 +3,10 @@
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-md-12" *ngFor="let trabalho of trabalhos">
+    <div class="col-md-12" *ngFor="let item of items">
       <div class="card card-event mb-3">
         <div class="card-body linha">
-          <h5 class="card-title">{{ trabalho.titulo }}</h5>
+          <h5 class="card-title">{{ item.trabalho.titulo }}</h5>
           <div class="spacer"></div>
           <button class="btn" ><i class="fa fa-trash"></i></button>
         </div>
