--- a/front/src/app/pages/organizer-work/organizer-work.component.scss
+++ b/front/src/app/pages/organizer-work/organizer-work.component.scss
@@ -7,3 +7,9 @@
   background-color: #fafafa;
   border: solid 1px #dadada;
 }
+
+h5 {
+  margin-bottom: 0;
+  align-items: center;
+  display: flex;
+}
