--- a/front/src/app/pages/organizer-work/organizer-work.component.html
+++ b/front/src/app/pages/organizer-work/organizer-work.component.html
@@ -13,8 +13,8 @@
           <div (click)="expandItem(item)" class="spacer"></div>
           <button (click)="downloadWork(item.trabalho)" class="btn"><i class="fa-solid fa-download"></i></button>
           <div (click)="expandItem(item)" class="spacer"></div>
-          <button class="btn btn-primary" >Aprovar</button>
-          <button class="btn btn-secondary">Rejeitar</button>
+          <button class="btn btn-primary margin-botoes tamanho-botoes" >Aprovar</button>
+          <button class="btn btn-secondary tamanho-botoes">Rejeitar</button>
         </div>
         <ul *ngIf="item.expanded" class="list-group list-group-flush">
           <span *ngIf="item.loading" class="spinner-border spinner-border-sm"></span>
