--- a/front/src/app/pages/main/main.component.html
+++ b/front/src/app/pages/main/main.component.html
@@ -106,5 +106,9 @@
     <app-organizer-work class="mostrar-scroll" *ngIf="this.selectedButton == 'Submissoes'">
 
     </app-organizer-work>
+
+    <app-evaluate-work-list class="mostrar-scroll" *ngIf="this.selectedButton == 'AvaliarTrabalhos'">
+
+    </app-evaluate-work-list>
   </div>
 </div>
