Melhoria mensagem tooltip

--- a/front/src/app/pages/organizer-view-work/organizer-view-work.component.html
+++ b/front/src/app/pages/organizer-view-work/organizer-view-work.component.html
@@ -12,7 +12,7 @@
       <div class="card card-event mb-3">
         <div class="card-body linha">
           <h5 (click)="expandItem(item)" class="card-title">{{ item.trabalho.titulo }} <i class="fa fa-question-circle"
-            pTooltip="Clique no card para ver o resultado segundo os avaliadores"
+            pTooltip="Clique no card para ver os comentários dos avaliadores"
             tooltipPosition="top" placeholder="Top"></i>
           </h5>
           <div (click)="expandItem(item)" class="spacer"></div>
